@@ -39,6 +39,7 @@ struct s3b_config {
     off_t                       num_blocks;
     int                         debug;
     int                         force;
+    int                         no_auto_detect;
     struct fuse_args            fuse_args;
     log_func_t                  *log;
 
